# session-replay

./: # PRD — AI Browser Workflow Runtime.md  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  TESTING_STRATEGY.md  UI-UX-SPEC.md  breaker agent.md  dashboard-snapshot.md  docker-compose.yml  opencode.json
backend/: .coverage  .gitignore  Dockerfile  Dockerfile.prod  alembic.ini  coverage-detail.json  coverage-full.json  coverage-now.json  coverage.json  coverage.xml  pyproject.toml
backend/adapters/: __init__.py  base.py  registry.py
backend/adapters/odoo/: adapter.py  client.py
backend/ai/: agent_tools.py  client.py  extraction_shapes.py  prompts.py
backend/api/: main.py
backend/api/v1/: agent.py  ai.py  analysis.py  artifacts.py  audit.py  client_logs.py  connectors.py  daemon.py  debug.py  events.py  integrations.py  interventions.py  recruiter.py  runs.py  settings.py  webhooks.py  workflows.py
backend/core/: config.py  database.py  exceptions.py  state_machine.py  utils.py
backend/core/models/: __init__.py  ai_decision_outcome.py  ai_reasoning_chain.py  analysis.py  artifact.py  base.py  connector.py  event.py  intervention.py  outbox.py  page_state_snapshot.py  recovery_attempt_trace.py  run.py  run_summary.py  settings.py  webhook.py  workflow.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_event_log.py  002_create_workflows_and_runs.py  003_create_human_interventions.py  004_add_total_steps_to_runs.py  005_add_idempotency_key_to_event_log.py  006_add_value_and_methods.py  007_add_sequence_and_constraints.py  008_add_fk_and_connectors.py  009_create_artifacts.py  010_create_audit_outbox.py  011_create_semantic_models.py  012_create_ai_decision_outcomes.py  013_add_observability.py  014_add_ai_centric_runtime_fields.py  015_add_screenshot_meta_to_ai_decision_outcomes.py  016_add_ai_conversation_to_execution_runs.py  017_add_workflow_connector_bindings.py  018_add_webhook_triggers.py  019_add_webhook_trigger_last_job.py  020_add_workflow_type_remove_draft.py  021_add_run_origin.py  022_add_linkedin_applicants.py  023_add_workflow_config.py  024_add_linkedin_leads.py  025_add_workflow_execution_mode.py
backend/services/: agent_action_state.py  agent_conversation.py  agent_decision_queries.py  agent_models.py  agent_service.py  agent_tool_dispatcher.py  ai_outcome_service.py  artifact_service.py  audit.py  boolean_query_builder.py  connector_forum_service.py  execution_service.py  healing_service.py  idempotency_cache.py  learning_service.py  linkedin_applicant_push_service.py  linkedin_lead_push_service.py  log_service.py  message_rendering_service.py  outbox_service.py  profile_url_utils.py  reconcile_supervisor.py  recovery_supervisor.py  recruiter_expectations.json  recruiter_pipeline_service.py  recruiter_push_service.py  reply_intent_service.py  retention_service.py  retention_supervisor.py  self_healing_service.py  semantic_analysis_service.py  storage_service.py  template_service.py  webhook_trigger_service.py  workflow_connector_service.py  workflow_service.py  workflow_simplifier.py
backend/services/site_adapters/: __init__.py  base.py  linkedin.py  registry.py
backend/tests/: conftest.py  doubles.py
backend/tests/e2e/: test_full_lifecycle.py
backend/tests/integration/: test_agent_poll_recovery.py  test_api_routes.py  (+18 more)
(+561 files in other folders)
