[project]
name = "session-replay-backend"
version = "0.1.0"
description = "AI Browser Workflow Runtime — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "cryptography>=42.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "fsspec>=2026.4.0",
    "openai>=1.51,<2.0",
]

[tool.setuptools.packages.find]
include = ["core*", "api*", "services*", "ai*", "adapters*", "workers*", "migrations*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"migrations/*" = ["E501"]
"ai/client.py" = ["ARG002"]
"ai/prompts.py" = ["E501"]
"services/semantic_analysis_service.py" = ["E501"]
"services/template_service.py" = ["E501"]
"api/v1/analysis.py" = ["E501"]
"tests/unit/test_semantic_analysis_service.py" = ["E501"]
"tests/unit/test_template_service.py" = ["E501"]
"tests/integration/test_analysis_api.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: critical path, runs on every commit",
    "regression: full suite, runs nightly/CI",
    "slow: takes longer than 30 seconds",
    "security: security and injection tests, separate pipeline",
    "chaos: destructive tests targeting service worker lifecycle",
    "performance: benchmark assertions with time budgets",
    "postgres: requires a real PostgreSQL instance (Docker + testcontainers)",
    "real_ai: requires a real AI API key",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "croniter>=6.2.2",
    "hypothesis>=6.152.7",
    "pytz>=2026.2",
    "respx>=0.23.1",
    "testcontainers>=4.14.2",
]
